[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/System/Intro/TitleScreenBackground.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/Menu/ButtonDefault.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/System/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/Audio/Music/piano_intro.ogg" type="AudioStream" id=4]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 480

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="MainMenu" type="Node"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
margin_left = 480.0
margin_right = 960.0
margin_bottom = 270.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ColorRect"]
margin_left = 1440.0
margin_top = 270.0
margin_right = 1920.0
margin_bottom = 540.0
rect_rotation = 180.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color( 0, 0, 0, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -128.0
margin_right = -79.0
margin_bottom = -13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 81.0
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 81.0
custom_styles/normal = SubResource( 3 )
text = "NEW GAME"

[node name="ContinueButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 19.0
margin_right = 81.0
margin_bottom = 34.0
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "CONTINUE"

[node name="QuitButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 38.0
margin_right = 81.0
margin_bottom = 53.0
custom_styles/normal = SubResource( 6 )
text = "QUIT"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
